<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputAlter2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalInformation">

    <!--  android:text="@string/inputName" /> -->

    <Button
        android:id="@+id/btPInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/calibriregular"
        android:minWidth="150dp"
        android:text="@string/btPInfo"
        android:textSize="18sp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"/>

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/calibriregular"
        android:hint="@string/inputName"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:minWidth="150dip"
        android:minHeight="50dip"
        android:textColor="@color/schwarz"
        android:textSize="30dp" />

    <!-- android:text="@string/inputAlter" /> -->

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <RadioButton
            android:id="@+id/inputFemale"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:fontFamily="@font/calibriregular"
            android:text="@string/cbFemale"
            android:textColor="@color/schwarz"
            android:textSize="30dp" />

        <RadioButton
            android:id="@+id/inputMale"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:fontFamily="@font/calibriregular"
            android:text="@string/cbMale"
            android:textColor="@color/schwarz"
            android:textSize="30dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/inputAlter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputName"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/calibriregular"
        android:hint="@string/inputAlter"
        android:inputType="numberSigned"
        android:maxLength="3"
        android:minWidth="150dip"
        android:minHeight="50dip"
        android:textColor="@color/schwarz"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="619dp"
        android:layout_height="553dp"
        android:alpha=".35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224"
        app:srcCompat="@drawable/apptivity_fg" />
</RelativeLayout>