<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="12dp"
    tools:context=".Search1">

    <TextView
        android:id="@+id/tvWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/calibriregular"
        android:text="@string/WithWho"
        android:textColor="@color/Hintergrundblau"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSearch2"
        android:layout_width="171dp"
        android:layout_height="57dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/calibriregular"
        android:text="@string/continues"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputBudget"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/tvBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/calibriregular"
        android:text="@string/budget"
        android:textColor="@color/schwarz"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputFriend" />

    <CheckBox
        android:id="@+id/inputAlone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/calibriregular"
        android:onClick="onCheckboxClicked"
        android:text="@string/alone"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWith" />

    <CheckBox
        android:id="@+id/inputPartner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibriregular"
        android:onClick="onCheckboxClicked"
        android:text="@string/partner"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAlone" />

    <CheckBox
        android:id="@+id/inputFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/calibriregular"
        android:onClick="onCheckboxClicked"
        android:text="@string/family"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPartner" />

    <CheckBox
        android:id="@+id/inputFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/calibriregular"
        android:onClick="onCheckboxClicked"
        android:text="@string/friends"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFamily" />

    <SeekBar
        android:id="@+id/inputBudget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/calibriregular"
        android:max="50"
        android:progress="0"
        android:scrollbarSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btSearch2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBudget" />

    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibriregular"
        android:text="TextView"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@color/Hintergrundblau"
        android:textColorHint="@color/Hintergrundblau"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btSearch2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBudget"
        app:layout_constraintVertical_bias="0.208" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="619dp"
        android:layout_height="553dp"
        android:alpha=".35"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@color/Hintergrundblau"
        android:textColorHint="@color/Hintergrundblau"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/apptivity_fg" />
</androidx.constraintlayout.widget.ConstraintLayout>